--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+uvicorn = "*"
+fastapi = {extras = ["all"], version = "*"}
 
 [dev-packages]
 
