--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ fastapi = {extras = ["all"], version = "*"}
 requests = "*"
 python-jose = {extras = ["cryptography"], version = "*"}
 passlib = {extras = ["bcrypt"], version = "*"}
+pillow = "*"
 
 [dev-packages]
 
